@startuml
!theme plain

enum Season

enum DayType

enum ApplianceType

class SwitchOnProbabilityKey {
    Season: season
    DayType: day_type
    int: quarter_hour_of_day

    + extract_from_datetime(datetime: instance_of_interest): SwitchOnProbabilityKey
}
SwitchOnProbabilityKey *-- DayType
SwitchOnProbabilityKey *-- Season

class SwitchOnProbabilities {
    dict[SwitchOnProbabilityKey, dict[int, float]]: seasonal_probability

    + __init__(): SwitchOnProbabilities
    + get(SwitchOnProbabilityKey key): float

}
note left of SwitchOnProbabilities: "Interface" definition:\nWe receive a "matrix" of probabilities,\nwhich maps from quarter hour of the\nyear to actual switch on probability\n(accounting for so called usage probability)
SwitchOnProbabilities *-- SwitchOnProbabilityKey

abstract class Appliance {
    + ApplianceType: type
    - SwitchOnProbabilities: switch_on_probability

    + __init__(\n\tSwitchOnProbabilities: type_switch_on_probability): Appliance
    + get_switch_on_probability(datetime: instance_of_interest): float
}
note right of Appliance: Implicit assumption:\nGeneration _only_ for one\nwhole year to be calculated
Appliance *-- SwitchOnProbabilities
Appliance *-- ApplianceType

class ApplianceLoadProfile extends Appliance {
    TimeSeries: time_series

    + __init__(\n\tfloat: usage_probability,\n\tSwitchOnProbabilities: type_switch_on_probability,\n\tTimeSeries: time_series\n\t): ApplianceWithProfile
}
note right of TimeSeries: Mapping from quarter hour\nfrom start of operation to\nconsumed power

class ApplianceConstantPower extends Appliance {
    float: p_rated

    + __init__(\n\tfloat: usage_probability,\n\tSwitchOnProbabilities: type_switch_on_probability,\n\tfloat: p_rated\n\t): ApplianceWithProfile
}

class TimeSeries {
    dict[int, float]: values
}
ApplianceWithProfile *-- TimeSeries

class Household {
 dict[Appliance, float]: Appliances

 + __init__()
 + __init__(int: no_of_inhabitants)
 + __init__(float: income)
 + __init__(HouseholdType: household_type)
}
note right of Household: Init without parameter:\nAccording to average household
Household *-- Appliance

enum HouseholdType
@enduml
